[gd_scene load_steps=14 format=2]

[ext_resource path="res://Materials/SpatialMaterials/Stopwatch-green.tres" type="Material" id=1]
[ext_resource path="res://Scripts/Objects/Stopwatch.gd" type="Script" id=2]
[ext_resource path="res://Materials/SpatialMaterials/Button_Green.tres" type="Material" id=3]
[ext_resource path="res://Materials/SpatialMaterials/Button_Red.tres" type="Material" id=4]
[ext_resource path="res://Materials/SpatialMaterials/Button_Black.tres" type="Material" id=5]
[ext_resource path="res://Scenes/Objects/DigitalDisplay.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2299, 1, 1 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 0.461964, 0.461252 )

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.001

[sub_resource type="CylinderMesh" id=7]
material = ExtResource( 4 )
top_radius = 0.2
bottom_radius = 0.2

[node name="Stopwatch" type="Spatial" groups=[
"Uhren",
]]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.05, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area/CollisionShape"]
transform = Transform( 0.071, 0, 0, 0, 1, 0, 0, 0, 1, -0.199, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="Knoepfe_und_Display" type="Spatial" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.255, 0, 0 )

[node name="TimeDisplay" parent="Knoepfe_und_Display" instance=ExtResource( 6 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 1, 2.54, 1.703, -0.299 )

[node name="DistanceDisplay" parent="Knoepfe_und_Display" instance=ExtResource( 6 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 1, 2.5, -0.5, 7 )

[node name="Buttons" type="Spatial" parent="Knoepfe_und_Display"]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -1.104, -1.698, 0 )
visible = false

[node name="StartButton" type="Area" parent="Knoepfe_und_Display/Buttons"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 2, 8.45251, -0.698575 )

[node name="CollisionShape" type="CollisionShape" parent="Knoepfe_und_Display/Buttons/StartButton"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Knoepfe_und_Display/Buttons/StartButton/CollisionShape"]
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="StopButton" type="Area" parent="Knoepfe_und_Display/Buttons"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 8.12551, 8.45251, -0.698575 )

[node name="CollisionShape" type="CollisionShape" parent="Knoepfe_und_Display/Buttons/StopButton"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Knoepfe_und_Display/Buttons/StopButton/CollisionShape"]
mesh = SubResource( 4 )
material/0 = ExtResource( 4 )

[node name="ResetButton" type="Area" parent="Knoepfe_und_Display/Buttons"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 5.05763, 8.45251, -0.698575 )

[node name="CollisionShape" type="CollisionShape" parent="Knoepfe_und_Display/Buttons/ResetButton"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Knoepfe_und_Display/Buttons/ResetButton/CollisionShape"]
mesh = SubResource( 4 )
material/0 = ExtResource( 5 )

[node name="SlideHandle" type="Area" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 1.2 )

[node name="CollisionShape" type="CollisionShape" parent="SlideHandle"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="SlideHandle/CollisionShape"]
transform = Transform( -8.14603e-08, -0.5, 0, 0.5, -8.14603e-08, 0, 0, 0, 0.5, -1, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="SlideHandle/CollisionShape"]
transform = Transform( -8.14603e-08, 0.5, 0, -0.5, -8.14603e-08, 0, 0, 0, 0.5, 1, 0, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="SlideHandle/CollisionShape"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = null
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="input_event" from="Knoepfe_und_Display/Buttons/StartButton" to="." method="_on_StartButton_input_event"]
[connection signal="input_event" from="Knoepfe_und_Display/Buttons/StopButton" to="." method="_on_StopButton_input_event"]
[connection signal="input_event" from="Knoepfe_und_Display/Buttons/ResetButton" to="." method="_on_ResetButton_input_event"]
[connection signal="input_event" from="SlideHandle" to="." method="_on_SlideHandle_input_event"]
